fixing embed pop-up on mobile.

--- a/website/public/css/custom.css
+++ b/website/public/css/custom.css
@@ -1,29 +1,47 @@
 .page-title .dropdown {
-	list-style-type: none;
-	border-radius: 2px;
+    list-style-type: none;
+    border-radius: 2px;
 }
 .menu-side {
-	color: white;
-	padding-left: 18px;
+    color: white;
+    padding-left: 18px;
 }
 x.axis {
-	stroke-width: 1.0;
+    stroke-width: 1.0;
 }
 .domain {
-	fill: none;
-	stroke: black;
-	stroke-width;
-	1px;
+    fill: none;
+    stroke: black;
+    stroke-width;
+    1px;
 }
 .fixed-height {
-	height:460px;
+    height: 460px;
 }
 .no-data-msg {
-	margin: 25% 30%;
-	text-align: center;
+    margin: 25% 30%;
+    text-align: center;
 }
 .top-buffer {
-	margin-top:5px;
+    margin-top: 5px;
+}
+.col-centered {
+    float: none;
+    margin: 0 auto;
+}
+.popover {
+    max-width: none;
+    width: 100%;
+    word-break: break-word;
+}
+#last-updated-since {
+    margin-left: 5%;
+}
+@media screen and (max-width: 768px) {
+    .popover {
+        max-width: 300px;
+        width: 100%;
+    }
 }
 @media screen and (max-width: 500px) {
     .fixed-height {
@@ -34,15 +52,4 @@ x.axis {
     .panel-title {
         font-size: 13px;
     }
-}
-.col-centered {
-	float: none;
-	margin: 0 auto;
-}
-.popover {
-	max-width: none;
-	width: 100%;
-}
-#last-updated-since {
-	margin-left: 5%;
 }
